--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,9 @@
     max-width: 900px;
     background-image: url('https://cataclysm1987.github.io/Javascript-Exercises-2-3-2017/img/bg-repeat.jpg');
     background-repeat: repeat;
-    margin-top: -30px;
+    margin-top: -31px;
+    border:1px solid #000000;
+    border-top: none;
 }
 
 #source {
